[package]
name = "showmarket"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8.8", features = ["ws"] }
tokio = {version = "1.49.0", features = ["full"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yew = { version = "0.21", features = ["ssr"] }
tower-http = { version = "0.6", features = ["fs"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tower = "0.5"
